--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 *.xcuserstate
 
 *.xcuserstate
+
+xcode/diary/diary.xcodeproj/project.xcworkspace/xcuserdata/wissner.xcuserdatad/UserInterfaceState.xcuserstate
